RESOLVED FIXED168640
AudioSampleDataSource doesn't need to use the m_scratchBuffer on the pulling thread
https://bugs.webkit.org/show_bug.cgi?id=168640
Summary AudioSampleDataSource doesn't need to use the m_scratchBuffer on the pulling ...
Jer Noble
Reported 2017-02-20 23:06:07 PST
AudioSampleDataSource doesn't need to use the m_scratchBuffer on the pulling thread
Attachments
Patch (2.27 KB, patch)
2017-02-20 23:07 PST, Jer Noble
no flags
Patch (2.21 KB, patch)
2017-02-21 11:07 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-20 23:07:34 PST
Jer Noble
Comment 2 2017-02-21 11:07:19 PST
Eric Carlson
Comment 3 2017-02-21 11:48:44 PST
Comment on attachment 302286 [details] Patch As we discussed, this isn't correct in the case where the ring buffer data is supposed to be mixed into the output, but the existing code is equally incorrect so I will file a new bug to fix that.
WebKit Commit Bot
Comment 4 2017-02-21 15:20:22 PST
Comment on attachment 302286 [details] Patch Clearing flags on attachment: 302286 Committed r212771: <http://trac.webkit.org/changeset/212771>
WebKit Commit Bot
Comment 5 2017-02-21 15:20:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.