AudioSampleDataSource doesn't need to use the m_scratchBuffer on the pulling thread https://bugs.webkit.org/show_bug.cgi?id=168640

Reviewed by Eric Carlson.

Rather than copying the pulled data into a scratch buffer, applying a volume transformation
and then copying back out, just do the volume transformation in-place in the destination
buffer.

* platform/audio/mac/AudioSampleDataSource.cpp:
(WebCore::AudioSampleDataSource::pullSamplesInternal):


Canonical link: https://commits.webkit.org/185685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212771 268f45cc-cd09-0410-ab3c-d52691b4dbfc